tests/ui/parser/keyword-mod-as-identifier.stderr
error: expected identifier, found keyword `mod`
  --> $DIR/keyword-mod-as-identifier.rs:4:9
   |
LL |     let mod = "foo";
   |         ^^^ expected identifier, found keyword
   |
help: escape `mod` to use it as an identifier
   |
LL |     let r#mod = "foo";
   |         ++

error: aborting due to 1 previous error

